--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <!-- ========================================
                    NAME AND TAGLINE
                    ==========================================-->
-              <div class="title col s12 m12 l9 right  wow fadeIn" data-wow-delay="0.1s">   
+              <div class="blackfont title col s12 m12 l9 right  wow fadeIn" data-wow-delay="0.1s">   
                 <h2>ZX SU</h2> <!-- title name -->
                 <span>Software Developer</span>  <!-- tagline -->
               </div>
@@ -228,10 +228,10 @@
               <div class="col s12 m12 l10 website right" >
                 <div class="row">
                   <div class="col s12 m12 l6">
-                    <span><a href="">www.alrayhan.com</a></span>
+                    <span><a href="https://zpcat.blogspot.com/">https://zpcat.blogspot.com</a></span>
                   </div>
                   <div class="col col s12 m12 l6">
-                    <span><a href="">www.dribble.com/rtralrayhan</a></span>
+                    <span><a href="https://suzp1984.github.io/">https://suzp1984.github.io/</a></span>
                   </div>
                 </div>
               </div>
