remove blackfont position

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <!-- ========================================
                    NAME AND TAGLINE
                    ==========================================-->
-              <div class="blackfont title col s12 m12 l9 right  wow fadeIn" data-wow-delay="0.1s">   
+              <div class="title col s12 m12 l9 right  wow fadeIn blackfont" data-wow-delay="0.1s">   
                 <h2>ZX SU</h2> <!-- title name -->
                 <span>Software Developer</span>  <!-- tagline -->
               </div>
