update img links

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class="row">
             <div class="heading">
               <div class="feature-img">
-                <a href="index.html"><img src="images/profile-img.png" class="responsive-img" alt=""></a>
+                <a href="https://suzp1984.github.io/"><img src="images/profile-img.png" class="responsive-img" alt=""></a>
               </div>
 
               <div class="nav-icon">
